scrollbar correction

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@
   position: relative;
   display: inline-block;
   width: 120px;
-  padding-top: 225px ;
+  padding-top: 219px ;
 }
 
 .dropdown-content {
